--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -1,19 +1,29 @@
 /* color of tag nodes */
 .theme-dark .graph-view.color-fill-tag {
-  color: #2c6ad0;
+  color: #203c92;
 }
 
 /* color of node */
 .graph-view.color-fill {
-  color: #946b2d;
+  color: #937a1f;
 }
 
 /* color of strings attaching nodes */
 .graph-view.color-line {
-  color: #5d5d5d;
+  color: #222f5b;
+}
+
+/* color of arrow (if you enabled it) */
+.theme-dark .graph-view.color-arrow {
+  color: #000000;
+}
+
+/* color of nodes on hover */
+.graph-view.color-fill-highlight {
+  color: #0e1a40;
 }
 
 /* line color which join the notes but when you hover on the node: */
 .graph-view.color-line-highlight {
-  color: #2067dd;
+  color: #0034a8;
 }
